crates/panache-parser/tests/snapshots/yaml__yaml_suite_A2M4.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: A2M4
input: "? a\n: -\tb\n  -  -\tc\n     - d\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
