crates/panache-parser/tests/snapshots/yaml__yaml_suite_AZ63.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 246
expression: snapshot
---
case_id: AZ63
input: "one:\n- 2\n- 3\nfour: 5\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
