crates/panache-parser/tests/snapshots/yaml__yaml_suite_BU8L.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: BU8L
input: "key: &anchor\n !!map\n  a: b\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
