crates/panache-parser/tests/snapshots/yaml__yaml_suite_C4HZ.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: C4HZ
input: "%TAG ! tag:clarkevans.com,2002:\n--- !shape\n  # Use the ! handle for presenting\n  # tag:clarkevans.com,2002:circle\n- !circle\n  center: &ORIGIN {x: 73, y: 129}\n  radius: 7\n- !line\n  start: *ORIGIN\n  finish: { x: 89, y: 102 }\n- !label\n  start: *ORIGIN\n  color: 0xFFEEBB\n  text: Pretty vector drawing.\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
