crates/panache-parser/tests/snapshots/yaml__yaml_suite_CVW2.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: CVW2
input: "---\n[ a, b, c,#invalid\n]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_LEX_COMMENT_NOT_PRECEDED_BY_SPACE:comment must be preceded by whitespace@14..22]
