crates/panache-parser/tests/snapshots/yaml__yaml_suite_EHF6.snap
---
source: crates/panache-parser/tests/yaml.rs
expression: snapshot
---
case_id: EHF6
input: "!!map {\n  k: !!seq\n  [ a, !!str b]\n}\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
