crates/panache-parser/tests/snapshots/yaml__yaml_suite_G5U8.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: G5U8
input: "---\n- [-, -]\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_INVALID_PLAIN_SCALAR_IN_FLOW:`-` cannot start a plain scalar in flow context@7..8]
