crates/panache-parser/tests/snapshots/yaml__yaml_suite_JKF3.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: JKF3
input: "- - \"bar\nbar\": x\n"
has_error_contract: true
parsed_mapping_tree: false
diagnostics: [YAML_PARSE_UNEXPECTED_DEDENT:multi-line quoted scalar continuation indented at or below parent block indent@9..10]
