crates/panache-parser/tests/snapshots/yaml__yaml_suite_KK5P.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: KK5P
input: "complex1:\n  ? - a\ncomplex2:\n  ? - a\n  : b\ncomplex3:\n  ? - a\n  : >\n    b\ncomplex4:\n  ? >\n    a\n  :\ncomplex5:\n  ? - a\n  : - b\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
