crates/panache-parser/tests/snapshots/yaml__yaml_suite_M5DY.snap
---
source: crates/panache-parser/tests/yaml.rs
assertion_line: 250
expression: snapshot
---
case_id: M5DY
input: "? - Detroit Tigers\n  - Chicago cubs\n:\n  - 2001-07-23\n\n? [ New York Yankees,\n    Atlanta Braves ]\n: [ 2001-07-02, 2001-08-12,\n    2001-08-14 ]\n"
has_error_contract: false
parsed_mapping_tree: true
diagnostics: []
